@@ -106,11 +106,6 @@ extern int excess_flag;
 extern const char* header_format;
 extern int header_uses_digest;
 
-/* Typedefs for the structs below.
- */
-typedef struct Dir Dir;
-typedef struct DirList DirList;
-
 /* Represents a single physical directory.
  */
 struct Dir
@@ -118,6 +113,8 @@ struct Dir
   dev_t device;
   ino_t inode;
 };
+
+typedef struct Dir Dir;
 
 /* Represents a list of physical directories.
  */
@@ -127,6 +124,8 @@ struct DirList
   size_t allocated;
   size_t available;
 };
+
+typedef struct DirList DirList;
 
 /* List of traversed physical directories, used to avoid loops.
  */
