@@ -3,6 +3,10 @@ Change log for duff
 
 Maintained since version 0.3.1.
 
+2012-03-30  Camilla Berglund  <elmindreda@elmindreda.org>
+
+ * duff.h duffdriver.c: Corrected order of types and typedefs.
+
 2012-02-19  Camilla Berglund  <elmindreda@elmindreda.org>
 
  * duffdriver.c (process_directory): Made asprintf error exit.
